# CogniFetch

./: .env.example  .gitignore  Dockerfile  README.md  SPECS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_documents.py  0003_add_chat.py  0004_add_admin.py
app/: config.py  dependencies.py  main.py  runtime_config.py
app/admin/: router.py  schemas.py  service.py
app/auth/: router.py  schemas.py  service.py  utils.py
app/chat/: router.py  schemas.py  service.py
app/chat/agent/: edges.py  graph.py  nodes.py  retriever.py  schemas.py
app/db/: models.py  session.py
app/documents/: ingestion.py  router.py  schemas.py  service.py  storage.py
frontend/: .env.example  README.md  SPECS.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AdminRoute.jsx  ChangePasswordModal.jsx  ChatPane.jsx  Composer.jsx  MarginaliaRail.jsx  MessageBubble.jsx  ProtectedRoute.jsx  Sidebar.jsx  UploadZone.jsx  UserSettingsModal.jsx
frontend/src/contexts/: AuthContext.jsx  DocumentsContext.jsx
frontend/src/pages/: AdminPage.jsx  ChatPage.jsx  DocumentsPage.jsx  LoginPage.jsx  RegisterPage.jsx
tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_ingestion.py
